--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# Configurar la coneccion a la base de datos
+spring.datasource.url = jdbc:mysql://192.185.4.65:3306/jbarilla_ingsoftware?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = jbarilla_estudia
+spring.datasource.password = 2Ui!OssHDQGv
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
+# Indicar el DBMS
+spring.jpa.database: MYSQL
+
+# Indica si debe mostrar el log de las consultas sql ejecutadas
+# Bueno a la hora de depurar 
+spring.jpa.show-sql: true
+
+# Configurar Hibernate
+spring.jpa.hibernate.ddl-auto: update
+spring.jpa.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.ImprovedNamingStrategyuto=none
